cluster configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: service--teste
spec:
  rules:
    - host: service.teste
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service--teste-service
                port:
                  number: 5000
